--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
 
     <footer>
         <p>Email: carloscruz@acad.ifma.edu.br</p>
+        <p>Horários: estamos abertos das 8h-19</p>
+        <p>Endereço: rua Venezuela</p>
+        <p>Contato: 99992345464</p>
     </footer>
 
     <script src="dados.js"></script>
     <script src="script.js"></script>
+
 </body>
 </html>
