--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
         <li><a href="#novidades">Novidades</a></li>
       </ul>
     </li>
+    <li class="dropdown">
+      <a href="#cadastro">Cadastro</a>
+      <ul class="dropdown__menu">
+        <li><a href="cadprodutos-main/index.html">Cliente</a></li>
+        <li><a href="cadclientes-main/index.html">Produto</a></li>
+      </ul>
+    </li>
     <li><a href="#contato">Contato</a></li>
   </ul>
 
